Kubernetes-2/4/webapp-service.yml
apiVersion: v1
kind: Service
metadata:
  name: webapp-service
  namespace: mynamespace
spec:
  type: ClusterIP
  selector:
    app: webapp
  ports:
    - protocol: "TCP"
      port: 80
      targetPort: 80
